crates/sobria-ingest/tests/snapshots/silver_validation__schema_comparia_conversations.snap
---
source: crates/sobria-ingest/tests/silver_validation.rs
assertion_line: 132
expression: s
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$id": "https://sobr.ia/schemas/silver/comparia_conversations-v1.json",
  "title": "Sobr.ia — Silver entity: comparia_conversations v1",
  "description": "Conversations ComparIA promues en Silver. Schéma v1 volontairement permissif — conserve toutes les colonnes ComparIA d'origine telles quelles, en ajoutant deux colonnes systématiques de traçabilité. Le mapping métier précis (extraction de co2_eq, tokens, model_id typés) interviendra en v2 quand la spec ComparIA sera figée.",
  "type": "object",
  "additionalProperties": true,
  "required": ["_copper_sha256", "_ingested_at"],
  "properties": {
    "_copper_sha256": {
      "type": "string",
      "pattern": "^[0-9a-fA-F]{64}$",
      "description": "SHA-256 du fichier Copper d'origine (lineage)."
    },
    "_ingested_at": {
      "type": "string",
      "format": "date-time",
      "description": "Horodatage UTC d'écriture en Silver."
    }
  }
}
